tests/samples/negative/generics/generic_impl_target_param.ax
module generic_impl_target_param;

impl<T> T {
    fn value(self: *const T) -> T {
        return *self;
    }
}

fn main() -> i32 {
    var value: i32 = 1;
    return value.value();
}
